--- a/blogdata/css/core.css
+++ b/blogdata/css/core.css
@@ -3016,6 +3016,17 @@ textarea {
   left: 0;
   transform: translate(0, -50%);
 }
+.search-form{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.search-form label {
+  flex: 1;
+}
+.search-form .search-field{
+  margin-bottom: 0;
+}
 /*--/search_bar--*/
 .widget_block {
   padding-bottom: 30px;
