--- a/blogdata/css/woo.css
+++ b/blogdata/css/woo.css
@@ -312,13 +312,23 @@ footer .blogdata-widget .woocommerce ul.cart_list li img, footer .blogdata-widge
 }
 .woocommerce span.onsale, .woocommerce ul.products li.product .onsale {  
   width: 200px;
-  height: 20px;
+  height: auto;
   min-height: 20px;
   line-height: 16px;
   top: 25px;
   right: -60px;
   transform: rotate(45deg);
   border-radius: 0;
+}
+.woocommerce.single-product .type-product span.onsale {
+    transform: rotate(0);
+    width: 55px;
+    height: auto;
+    padding: 5px;
+    top: 10px;
+    left: 10px;
+    border-radius: 4px;
+    box-shadow: 0 0 10px 0 #00000020;
 }
 .woocommerce .woocommerce-ordering select {
   height: 50px;
@@ -436,4 +446,13 @@ table, th, td {
 }
 .rtl.woocommerce ul.products li.product .woocommerce-loop-product__link:hover .woocommerce-loop-product__title{
 	background-position: right 100%;
+}
+.rtl.woocommerce.single-product .type-product span.onsale{
+	left: auto;
+	right: 10px;
+}
+.rtl.woocommerce span.onsale, .rtl.woocommerce ul.products li.product .onsale{
+	transform: rotate(315deg);
+    left: -60px;
+    right: auto;
 }
