--- a/blogdata/css/core-rtl.css
+++ b/blogdata/css/core-rtl.css
@@ -477,6 +477,48 @@ p {
   left: 4px;
   right: auto;
 }
+figure {
+  margin: 0 0 1rem;
+}
+html {
+  font-size: 100%;
+}
+/*
+  ##Device = Most of the screen
+  ##Screen = 1200px and under.
+*/
+@media only screen and (max-width: 1200px) {
+  html {
+    font-size: 95%;
+  }
+}
+/* 
+  ##Device = Most of the tablets
+  ##Screen = 991px and under.
+*/
+@media screen and (max-width: 991px) {
+  html {
+    font-size: 90%;
+  }
+}
+/* 
+  ##Device = Most of the tablets
+  ##Screen = 767px and under.
+*/
+@media screen and (max-width: 767px) {
+  html {
+    font-size: 85%;
+  }
+}
+/* 
+  ##Device = Most of the smartphones (portrait)
+  ##Screen = 575px and under.
+*/
+@media screen and (max-width: 575px) {
+  html {
+    font-size: 80%;
+  }
+}
 /*---------------------------------------
 	Gradient Scroll Bar 
 -----------------------------------------*/
