--- a/blogdata/css/core-rtl.css
+++ b/blogdata/css/core-rtl.css
@@ -27,6 +27,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   text-align: start;
+  font-size: 16px;
   direction: rtl;
 }
 .wrapper {
@@ -446,8 +447,8 @@ ul {
 }
 p {
   margin: 0 0 15px 0;
-  font-size: 1rem;
-  line-height: 1.625rem;
+  font-size: 16px;
+  line-height: 1.625;
 }
 .radius-0 {
   border-radius: 0 !important;
@@ -799,7 +800,7 @@ header.bs-default {
   padding-right: 0;
 }
 .navbar-wp nav ul.sm-clean li a {
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.4;
   letter-spacing: -0.03em;
@@ -4576,5 +4577,8 @@ footer .bs-footer-copyright .footer-inner .footer-social ul {
   .advertising-banner .img-fluid.pull-right img{
     width: 100%;
     height: auto;
+  }
+  .bs-blog-post p{
+    font-size: 16px;
   }
 }
