--- a/blogdata/css/core.css
+++ b/blogdata/css/core.css
@@ -25,6 +25,7 @@ body {
   font-family: var(--Fontbody);
   font-weight: 400;
   line-height: 1.4;
+  font-size: 16px;
 }
 .wrapper {
   width: 100%;
@@ -443,8 +444,8 @@ ul {
 }
 p {
   margin: 0 0 15px 0;
-  font-size: 1rem;
-  line-height: 1.625rem;
+  font-size: 16px;
+  line-height: 1.625;
 }
 .radius-0 {
   border-radius: 0 !important;
@@ -788,7 +789,7 @@ header.bs-default {
   width: 100%;
 }
 .navbar-wp nav ul.sm-clean li a {
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.4;
   letter-spacing: -0.03em;
@@ -4559,5 +4560,8 @@ footer .bs-footer-copyright .footer-inner .footer-social ul {
   .advertising-banner .img-fluid.pull-right img{
     width: 100%;
     height: auto;
+  }
+  .bs-blog-post p{
+    font-size: 16px;
   }
 }
