--- a/blogdata/css/core.css
+++ b/blogdata/css/core.css
@@ -287,6 +287,7 @@ input[type=submit], button, .btn, .more-link {
   border-radius: 30px;
   border: none;
   font-size: 16px;
+  cursor: pointer;
 }
 .btn-theme:hover, .btn-theme:focus {
   transition: all 0.3s ease 0s;
