--- a/blogdata/css/core-rtl.css
+++ b/blogdata/css/core-rtl.css
@@ -2003,8 +2003,11 @@ header.bs-default {
           backdrop-filter: blur(15px);
 }
 .bs-blog-post .small {
-  padding: 20px 0 0 0;
   font-size: 17px;
+  padding: 0;
+}
+.bs-blog-post .bs-blog-thumb + .small {
+  padding: 20px 0 0;
 }
 .bs-blog-thumb {
   position: relative;
@@ -2252,7 +2255,6 @@ header.bs-default {
   line-height: 1.2;
 }
 .bs-blog-post .small {
-  padding: 20px 0 0 0;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5rem;
@@ -2554,6 +2556,12 @@ header.bs-default {
   align-items: center;
   gap: 20px;
   margin-bottom: 25px;
+}
+.bs-info-author-block.py-4.px-3.mb-4 p{
+  margin: 0;
+}
+.bs-info-author-block.py-4.px-3.mb-4 .flex-grow-1{
+  text-align: start;
 }
 .bs-blog-post.single.head_one {
   min-height: 380px;
@@ -4323,6 +4331,10 @@ footer .bs-footer-copyright .footer-inner .footer-social ul {
   .search-popup .search-inner .search-form{
     flex-direction: column;
   }
+	.search-results-count{
+		text-align: center;
+		font-size: 16px;
+	}
 }
 @media (max-width: 375px) {
   .justify-space-between {
