--- a/blogdata/css/woo.css
+++ b/blogdata/css/woo.css
@@ -376,7 +376,7 @@ table, th, td {
   margin: 2em 0;
 }
 .comment-respond .comment-reply-title {
-  font-size: 1.1rem;
+  font-size: 18px;
   font-weight: 600;
   margin-bottom: 0.5rem;
   display: block;
