--- a/blogdata/css/customizer-controls.css
+++ b/blogdata/css/customizer-controls.css
@@ -491,7 +491,7 @@ li#accordion-section-blogdata_pro_upsell h3{
 }
 .blogdata-notice-link{ 
   display:inline;
-  color: #222;
+  color: #2271b1;
 }
 .admin-bar .blogdata-btn-get-started, .admin-bar .blogdata-btn-get-started-customize{
   display: flex;
