--- a/blogdata/css/customizer-controls.css
+++ b/blogdata/css/customizer-controls.css
@@ -318,6 +318,7 @@ li#accordion-panel-Theme_colors_panel {
   flex: 0 1 30%;
   min-height: 100px;
   border-right: 1px solid #FCFCFD;
+  align-items: center;
 }
 .blogdata-notice_text {
   flex: 0 1 70%;
