--- a/blogdata/css/colors/default.css
+++ b/blogdata/css/colors/default.css
@@ -705,7 +705,9 @@ blockquote p {
 	border-color: var(--border-color);
 	color: var(--text-color)
 }
-
+ol.wp-block-latest-comments li{
+	border-color: var(--border-color);
+}
 .bs-sidebar .bs-widget ul li a {
 	color: var(--wtext-color);
 }
