--- a/blogdata/css/wp-core.css
+++ b/blogdata/css/wp-core.css
@@ -413,6 +413,7 @@ blockquote.right {
 
 ol.wp-block-latest-comments {
     padding: 0;
+    margin-bottom: 0;
 }
 .rtl ol.wp-block-latest-comments {
     padding: 0;
