--- a/blogdata/css/core-rtl.css
+++ b/blogdata/css/core-rtl.css
@@ -3281,6 +3281,16 @@ textarea {
   display: flex;
   gap: 15px;
 }
+.wp-block-latest-comments li{
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+.wp-block-latest-comments li:last-child{
+  border-style: none;
+  margin-bottom: 0px;
+}
 .bs-widget-tags, .tagcloud, .wp-block-tag-cloud {
   margin: 0;
   overflow: hidden;
