--- a/blogdata/css/core-rtl.css
+++ b/blogdata/css/core-rtl.css
@@ -3104,6 +3104,7 @@ textarea {
   font-weight: 600;
   margin-bottom: 30px;
   padding: 0;
+  font-family: var(--Fontheading);
   position: relative;
 }
 .wp-block-search__label::before {
