--- a/blogdata/css/core-rtl.css
+++ b/blogdata/css/core-rtl.css
@@ -3275,6 +3275,7 @@ textarea {
   width: unset;
   height: unset;
   line-height: 1;
+  border-radius: 0;
 }
 .bs-sidebar .widget_categories ul li {
   display: flex;
