--- a/blogdata/css/core.css
+++ b/blogdata/css/core.css
@@ -3251,6 +3251,7 @@ textarea {
   width: unset;
   height: unset;
   line-height: 1;
+  border-radius: 0;
 }
 .bs-sidebar .widget_categories ul li {
   display: flex;
